Добавлена БД, создание миграций

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
+.vs
+/.vs
 /.vs/FinancialManagementApp
 /FinancialManagementApp/bin/Debug/net6.0-windows
 /FinancialManagementApp/obj
+/.vs/ProjectEvaluation/financialmanagementapp.metadata.v7.bin
+/.vs/ProjectEvaluation/financialmanagementapp.projects.v7.bin
+/FinancialManagementApp/bin/Debug/net8.0-windows/FinancialManagementApp.dll
+/FinancialManagementApp/bin/Debug/net8.0-windows/FinancialManagementApp.exe
+/FinancialManagementApp/bin/Debug/net8.0-windows/FinancialManagementApp.pdb
+/FinancialManagementApp.Domain/bin/Debug/net8.0/FinancialManagementApp.Domain.pdb
+*.dll
+*.json
+/FinancialManagementApp.Infrastructure/bin/Debug/net8.0
+/FinancialManagementApp.Domain/obj/Debug/net8.0
+/FinancialManagementApp.Domain/obj/Release/net8.0
+/FinancialManagementApp.Infrastructure/obj/Release/net8.0
+/FinancialManagementApp.Infrastructure/obj/project.nuget.cache
+/FinancialManagementApp.Infrastructure/obj/project.assets.json
+/FinancialManagementApp.Infrastructure/obj/FinancialManagementApp.Infrastructure.csproj.nuget.g.targets
+/FinancialManagementApp.Infrastructure/obj/FinancialManagementApp.Infrastructure.csproj.nuget.dgspec.json
+/FinancialManagementApp.Infrastructure/obj/FinancialManagementApp.Infrastructure.csproj.nuget.g.props
+*.pdb
+*.txt
+*.cache
+/FinancialManagementApp.Infrastructure/obj/Debug/net8.0/FinancialManagementApp.Infrastructure.assets.cache
+*.CopyComplete
