--- a/FinancialManagementApp/FinancialManagementApp.csproj
+++ b/FinancialManagementApp/FinancialManagementApp.csproj
@@ -18,4 +18,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FinancialManagementApp.Domain\FinancialManagementApp.Domain.csproj" />
+    <ProjectReference Include="..\FinancialManagementApp.Infrastructure\FinancialManagementApp.Infrastructure.csproj" />
+  </ItemGroup>
 </Project>
