--- a/FinancialManagementApp/FinancialManagementApp.csproj
+++ b/FinancialManagementApp/FinancialManagementApp.csproj
@@ -11,12 +11,15 @@
     <None Remove="Images\logo.svg" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="SharpVectors.Wpf" Version="1.8.4" />
+  </ItemGroup>
+  <ItemGroup>
     <Resource Include="Images\logo.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Content Include="Images\logo.svg">
+    <Resource Include="Images\logo.svg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FinancialManagementApp.Domain\FinancialManagementApp.Domain.csproj" />
