Оконо добавления операции, реактивное обновление баланса

--- a/FinancialManagementApp/FinancialManagementApp.csproj
+++ b/FinancialManagementApp/FinancialManagementApp.csproj
@@ -7,6 +7,7 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Images\add.svg" />
     <None Remove="Images\logo.png" />
     <None Remove="Images\logo.svg" />
   </ItemGroup>
@@ -14,6 +15,9 @@
     <PackageReference Include="SharpVectors.Wpf" Version="1.8.4" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Images\add.svg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Images\logo.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
