--- a/FinancialManagementApp/FinancialManagementApp.csproj
+++ b/FinancialManagementApp/FinancialManagementApp.csproj
@@ -12,6 +12,9 @@
     <None Remove="Images\logo.svg" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="8.0.0" />
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="SharpVectors.Wpf" Version="1.8.4" />
   </ItemGroup>
   <ItemGroup>
