--- a/FinancialManagementApp/FinancialManagementApp.csproj
+++ b/FinancialManagementApp/FinancialManagementApp.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Autofac" Version="8.0.0" />
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="ScottPlot.WPF" Version="5.0.21" />
     <PackageReference Include="SharpVectors.Wpf" Version="1.8.4" />
   </ItemGroup>
   <ItemGroup>
