Connection string вунесена в UserSecrets

--- a/FinancialManagementApp.Infrastructure/FinancialManagementApp.Infrastructure.csproj
+++ b/FinancialManagementApp.Infrastructure/FinancialManagementApp.Infrastructure.csproj
@@ -8,6 +8,7 @@
     <Copyright>Copyright ©  2024</Copyright>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
+    <UserSecretsId>0146aae4-ce2f-40b1-9098-adcbc859cda2</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="FontAwesome.WPF" Version="4.7.0.9" />
@@ -17,6 +18,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
   </ItemGroup>
   <ItemGroup>
